@@ -10,6 +10,10 @@ Bug fixes
 * LUCENE-6019, LUCENE-6117: Remove -Dtests.assert to make IndexWriter
   infoStream sane.  (Robert Muir, Mike McCandless)
 
+* LUCENE-6161: Resolving deletes was failing to reuse DocsEnum likely
+  causing substantial performance cost for use cases that frequently
+  delete old documents (Mike McCandless)
+
 ======================= Lucene 4.10.3 ======================
 
 Bug fixes
